--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ role-tables:
 
 <gradio-app src="https://weiting20-weiting20.hf.space" theme_mode="light"></gradio-app>
 
-<gradio-app src="https://xiaohang07-mattergpt-cpu.hf.space" theme_mode="light"></gradio-app>
+<gradio-app src="https://weiting20-weiting20.hf.space" theme_mode="light"></gradio-app>
 
 
 <section>
